# DiabetesPrediction

./: .gitignore  Transformer.py  data_cleaning.ipynb  main.ipynb  notes.html  notes.md  presentation.ipynb  pyproject.toml  rnd.ipynb  svm.ipynb  svm_manim.py
Data/Models/RFC/: RFC_hyper.pkl  RFC_hyper_cv.pkl  RFC_hyper_cv_tuned.pkl  RFC_no_hyper.pkl
Data/Models/SVM/: 01_SVM_no_hyper.pkl  02_SVM_para_sampl.pkl  03_SVM_para_grid.pkl  04_SVM_kfold_rnd_cv.pkl  05_SVM_strat_rnd_cv.pkl  06_SVM_loocv_rnd_cv.pkl  07_SVM_kfold_grid_cv.pkl  08_SVM_strat_grid_cv.pkl  09_SVM_loocv_grid_cv.pkl  SVM_no_hyper.pkl  SVM_para_grid.pkl  SVM_para_sampl.pkl  SVM_rnd_srch_CV.pkl
Data/Models/SVM/SVM_sklearn/: 01_SVM_no_hyper_sklearn.pkl.pkl  02_SVM_para_sampl_sklearn.pkl  03_SVM_para_grid_sklearn.pkl.pkl  04_SVM_kfold_rnd_cv_sklearn.pkl.pkl  05_SVM_strat_rnd_cv_sklearn.pkl.pkl  06_SVM_loocv_rnd_cv_sklearn.pkl  07_SVM_kfold_grid_cv_sklearn.pkl  08_SVM_strat_grid_cv_sklearn.pkl  09_SVM_loocv_grid_cv_sklearn.pkl  SVM_para_grid_sklearn.pkl  SVM_para_sampl_sklearn.pkl  SVM_para_sampler_sklearn.pkl
Manim/svm/: main.py
Manim/svm/animations/: intro.py  setup.py  svm2d.py  svm_animation.py
RFC/: Transformer.py  generate_plots.py  rfc.ipynb  rfc.py  utils.py
SVM/: Model_save.py  Transformer_cudf.py  rnd.ipynb  svm.ipynb  svm_sklearn.ipynb
models/: svm_model.joblib  svm_model_with_gamma.joblib  test.joblib
