[project]
name = "vortrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dtreeviz>=2.2.2",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "marimo>=0.10.9",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
]
